Closed
Bug 918535
Opened 12 years ago
Closed 12 years ago
Defect - Dismissing the soft keyboard in the start screen requires two taps.
Categories
(Core Graveyard :: Widget: WinRT, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla27
People
(Reporter: emtwo, Assigned: jimm)
References
Details
(Whiteboard: feature=defect c=tbd u=tbd p=1)
Attachments
(1 file)
|
1.05 KB,
patch
|
bbondy
:
review+
rsilveira
:
feedback+
|
Details | Diff | Splinter Review |
STR:
1) Tap the URL bar => keyboard slides in
2) Tap anywhere on the start screen
Expected results: Keyboard slides back in
Actual results: URL bar slides in on first tap and keyboard on second tap
Updated•12 years ago
|
Blocks: metrov1backlog
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0
Comment 1•12 years ago
|
||
See also bug 920175
| Assignee | ||
Updated•12 years ago
|
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0 → [preview] feature=defect c=tbd u=tbd p=0
| Assignee | ||
Comment 2•12 years ago
|
||
Hmm, I'm having trouble reproducing this.
Updated•12 years ago
|
Whiteboard: [preview] feature=defect c=tbd u=tbd p=0 → feature=defect c=tbd u=tbd p=0
Comment 3•12 years ago
|
||
I can reproduce with a build from yesterday evening, will take a look.
Assignee: nobody → rsilveira
Status: NEW → ASSIGNED
Comment 4•12 years ago
|
||
On the first click the urlbar blurs as expected. The focus goes to #main-window but the keyboard is still up. I tried moving the focus to other elements but the keyboard is still there. It's as if the accessibility layer didn't catch that we changed focus.
Comment 5•12 years ago
|
||
Hey Rodrigo, will you be taking this Defect during IT#16? If so, can you provide a point value.
Flags: needinfo?(rsilveira)
| Assignee | ||
Comment 6•12 years ago
|
||
Mind if I take this? I'm pretty sure this is down in the UIABridge code of widget.
Assignee: rsilveira → jmathies
Flags: needinfo?(rsilveira)
Whiteboard: feature=defect c=tbd u=tbd p=0 → feature=defect c=tbd u=tbd p=1
| Assignee | ||
Comment 7•12 years ago
|
||
With this applied in widget the problem should be addressed.
Attachment #812037 -
Flags: review?(rsilveira)
| Assignee | ||
Updated•12 years ago
|
Component: General → Widget: WinRT
OS: Windows 8 → Windows 8 Metro
Product: Firefox for Metro → Core
Comment 8•12 years ago
|
||
Thanks Jim. I'll add it.
Comment 9•12 years ago
|
||
Comment on attachment 812037 [details] [diff] [review]
fix
Review of attachment 812037 [details] [diff] [review]:
-----------------------------------------------------------------
I tried the patch and the issue is fixed. The code looks like is doing a relevant thing :), but I'm not familiar with the widget code to r+ it.
Attachment #812037 -
Flags: review?(rsilveira) → feedback+
Comment 10•12 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #6)
> Mind if I take this? I'm pretty sure this is down in the UIABridge code of
> widget.
Thanks for taking it by the way :)
| Assignee | ||
Comment 11•12 years ago
|
||
Comment on attachment 812037 [details] [diff] [review]
fix
r? -> bbondy
Attachment #812037 -
Flags: review?(netzen)
| Assignee | ||
Comment 12•12 years ago
|
||
(In reply to Rodrigo Silveira [:rsilveira] from comment #10)
> (In reply to Jim Mathies [:jimm] from comment #6)
> > Mind if I take this? I'm pretty sure this is down in the UIABridge code of
> > widget.
>
> Thanks for taking it by the way :)
np :) been meaning to get to it. sorry you had to spend front end time on it.
Comment 13•12 years ago
|
||
Comment on attachment 812037 [details] [diff] [review]
fix
Review of attachment 812037 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/windows/winrt/UIABridge.cpp
@@ +177,5 @@
> + return UIA_E_ELEMENTNOTAVAILABLE;
> + }
> +
> + nsCOMPtr<nsIAccessible> child;
> + nsresult rv = mAccessible->GetFocusedChild(getter_AddRefs(child));
nit: unreferenced local variable rv
Attachment #812037 -
Flags: review?(netzen) → review+
| Assignee | ||
Comment 14•12 years ago
|
||
Comment 15•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Comment 16•12 years ago
|
||
Went through the following "Defect" for iteration #16 without issues. Used the following build:
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2013-10-16-03-02-02-mozilla-central/
- Went through the original issue described in comment #0 without any issues
- Ensured that the OSK is dismissed while the Navigation App Bar slides to the bottom using a single tap (start screen)
- Ensured that the OSK is dismissed while vieiwng websites using a single tap
- Went through all of the above test cases using full, filled & snapped views without issues
Updated•11 years ago
|
OS: Windows 8 Metro → Windows 8.1
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•