Bug 918535 - Update focus state in UIABridge when focus moves to non-editable content. Addresses double-tap required to dismiss soft keyboard on start tab. f=rsilveira r=bbondy